# flowlytix-subscription-backend

./: .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  INTEGRATION_SETUP.md  Procfile  README.md  alembic.ini  create_test_license.py  debug_migration.py  diagnostic_main.py  docker-compose.yml  end_to_end_test.py  main.py  main_fixed.py  manual_migration.py  migration_debug.py  migration_then_server.py  no_migration_main.py  production-setup.md  pyproject.toml  skip_migration_main.py  start.sh  subscription_debug.py  test_main.py
alembic/: env.py  script.py.mako
alembic/versions/: 12aeace128ec_add_payment_tables.py  d165d8168f01_initial_migration.py
app/api/: __init__.py
app/api/routes/: __init__.py  payment.py  subscription.py
app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  payment.py  subscription.py
app/domain/repositories/: __init__.py  payment_repository.py  subscription_repository.py
app/domain/services/: __init__.py  payment_service.py  subscription_service.py
app/domain/value_objects/: money.py  payment_method.py  payment_status.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py
app/infrastructure/database/models/: __init__.py  payment.py  subscription.py
app/infrastructure/database/repositories/: __init__.py  payment_repository.py  subscription_repository.py
app/schemas/: payment.py  subscription.py
app/tests/: test_main.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: start-dev.sh
